# myelocare

./: .gitignore  README.md  pyproject.toml
runs/20251130/: current_run.json
runs/20251130/run001/server_aggregated_results/: results.json  run_config.json
runs/20251130/run001/train/round_1/client_0/: args.yaml  results.csv
runs/20251130/run001/train/round_1/client_1/: args.yaml  results.csv
runs/20251130/run001/train/round_1/client_2/: args.yaml  results.csv
runs/20251130/run001/train/round_2/client_0/: args.yaml  results.csv
runs/20251130/run001/train/round_2/client_1/: args.yaml  results.csv
runs/20251130/run001/train/round_2/client_2/: args.yaml  results.csv
runs/20251130/run002/server_aggregated_results/: results.json
runs/20251208/: current_run.json
runs/20251208/run001/server_aggregated_results/: results.json  run_config.json
runs/20251209/: current_run.json
runs/20251209/run001/server_aggregated_results/: results.json  run_config.json
runs/20251209/run002/server_aggregated_results/: results.json  run_config.json
runs/20251209/run003/server_aggregated_results/: results.json  run_config.json
runs/20251209/run004/server_aggregated_results/: results.json  run_config.json
runs/20251209/run005/server_aggregated_results/: results.json  run_config.json
runs/20251209/run006/server_aggregated_results/: results.json  run_config.json
runs/20251209/run007/server_aggregated_results/: results.json  run_config.json
scripts/: run_project.sh
yolosimulation/: client_app.py  config.py  data_partition.py  server_app.py  task.py
(+306 files in other folders)
