[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yolosimulation" 
version = "1.0.0"
description = "Federated Learning with YOLO and Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "yolosimulation.server_app:app"
clientapp = "yolosimulation.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 2
fraction-evaluate = 0.2
local-epochs = 1
learning-rate = 0.001
batch-size = 1
num-clients = 3
run-partitioner = 0


[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 1CPUs
options.backend.client-resources.num-gpus = 0.5 # at most ClientApp will run in a given GPU concurrently
